CHATS_SIT/force-app/main/default/objects/Provider_Manual_Claim__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment Record Id</label>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>Provider Manual Claims</relationshipLabel>
        <relationshipName>Provider_Manual_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Care_Month__c</fullName>
        <label>Care Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Care_Year__c</fullName>
        <label>Care Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHATS_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Id</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Provider Manual Claims</relationshipLabel>
        <relationshipName>Provider_Manual_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Code__c</fullName>
        <label>County Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Denial_Reason__c</fullName>
        <label>Denial Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Care Already Paid</fullName>
                </value>
                <value>
                    <fullName>Children Not Authorized For Care Dates Submitted</fullName>
                </value>
                <value>
                    <fullName>Claim Not Received Timely</fullName>
                </value>
                <value>
                    <fullName>Duplicate Record</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parent Fee Not Yet Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>File Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider e-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Mailing_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Mailing Address</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status_Updated_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Claimed__c</fullName>
        <label>Total Amount Claimed</label>
        <summarizedField>Claim_Detail__c.Total_Child_Claimed_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Claim_Detail__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim_Detail__c.Provider_Manual_Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Denied_Claim_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Denied Claim Queue</label>
        <referenceTo>Provider_Manual_Claim__c</referenceTo>
        <relationshipLabel>Provider Claim Queues</relationshipLabel>
        <relationshipName>Provider_Claim_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signature</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Record_Read_only</fullName>
        <active>true</active>
        <description>this is to restrict record edit for Paid or Denied claims</description>
        <errorConditionFormula>AND(
            OR(
            ISPICKVAL( PRIORVALUE(Claim_Status__c),&apos;Denied&apos;),
            ISPICKVAL( PRIORVALUE(Claim_Status__c),&apos;Paid&apos;)
            ),
            NOT(ISNEW())
            )</errorConditionFormula>
        <errorMessage>Paid or Denied Claims are not editable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Denial_Reason_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            ISPICKVAL(Denial_Reason__c,&apos;&apos;) ,
            ISPICKVAL(Claim_Status__c ,&apos;Denied&apos;)
            )</errorConditionFormula>
        <errorDisplayField>Denial_Reason__c</errorDisplayField>
        <errorMessage>Denial Reason is mandatory for a Denied Claim.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Adjustment_County_matching_Claim_County</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            NOT(ISNEW()),
            NOT(ISBLANK(Adjustment__c)),
            OR(
            County_Code__c != Adjustment__r.CDE_COUNTY__r.CDE_COUNTY__c,
            Provider_Id__c != Adjustment__r.IDN_PROVR__r.Name ,
            NOT(ISPICKVAL(Adjustment__r.CDE_TYPE_ADJMT__c,'1'))
            )
            )</errorConditionFormula>
        <errorDisplayField>Adjustment__c</errorDisplayField>
        <errorMessage>Adjustment Record must be a Claim associated to same County and Provider ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Claim_and_Adjustment_Same_Month</fullName>
        <active>true</active>
        <description>Adjustment must be for same month as Provider Claim record.</description>
        <errorConditionFormula>
            AND(
                NOT(ISBLANK(Adjustment__c)),
            OR(
    TEXT(MONTH( Adjustment__r.DTE_START_ADJMT__c )) &lt;&gt;  TEXT(Care_Month__c) ,
    YEAR( Adjustment__r.DTE_START_ADJMT__c ) &lt;&gt;  Care_Year__c)
    )</errorConditionFormula>
        <errorDisplayField>Adjustment__c</errorDisplayField>
        <errorMessage>Adjustment must be for same month as Provider Claim record.</errorMessage>
    </validationRules>
    <label>Provider Claim Queue</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Claim Queue Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Claim Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>