CHATS_SIT/force-app/main/default/objects/Provider_Manual_Claim__c/validationRules/Adjustment_County_matching_Claim_County.validationRule-meta.xml
<ValidationRule>
    <fullName>Adjustment_County_matching_Claim_County</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            NOT(ISNEW()),
            NOT(ISBLANK(Adjustment__c)),
            OR(
            County_Code__c != Adjustment__r.CDE_COUNTY__r.CDE_COUNTY__c,
            Provider_Id__c != Adjustment__r.IDN_PROVR__r.Name ,
            NOT(ISPICKVAL(Adjustment__r.CDE_TYPE_ADJMT__c,&apos;1&apos;))
            )
            )</errorConditionFormula>
    <errorDisplayField>Adjustment__c</errorDisplayField>
    <errorMessage>Adjustment Record must be a Claim associated to same County and Provider ID</errorMessage>
</ValidationRule>