CHATS_SIT/force-app/main/default/objects/Provider_Manual_Claim__c/validationRules/Claim_and_Adjustment_Same_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_and_Adjustment_Same_Month</fullName>
    <active>true</active>
    <description>Adjustment must be for same month as Provider Claim record.</description>
    <errorConditionFormula>AND(
                NOT(ISBLANK(Adjustment__c)),
            OR(
    TEXT(MONTH( Adjustment__r.DTE_START_ADJMT__c )) &lt;&gt;  TEXT(Care_Month__c) ,
    YEAR( Adjustment__r.DTE_START_ADJMT__c ) &lt;&gt;  Care_Year__c)
    )</errorConditionFormula>
    <errorDisplayField>Adjustment__c</errorDisplayField>
    <errorMessage>Adjustment must be for same month as Provider Claim record.</errorMessage>
</ValidationRule>