CHATS_SIT/force-app/main/default/objects/Provider_Manual_Claim__c/validationRules/Denial_Reason_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Denial_Reason_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            ISPICKVAL(Denial_Reason__c,&apos;&apos;) ,
            ISPICKVAL(Claim_Status__c ,&apos;Denied&apos;)
            )</errorConditionFormula>
    <errorDisplayField>Denial_Reason__c</errorDisplayField>
    <errorMessage>Denial Reason is mandatory for a Denied Claim.</errorMessage>
</ValidationRule>