CHATS_SIT/force-app/main/default/objects/Provider_Manual_Claim__c/validationRules/Record_Read_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Read_only</fullName>
    <active>true</active>
    <description>this is to restrict record edit for Paid or Denied claims</description>
    <errorConditionFormula>AND(
            OR(
            ISPICKVAL( PRIORVALUE(Claim_Status__c),&apos;Denied&apos;),
            ISPICKVAL( PRIORVALUE(Claim_Status__c),&apos;Paid&apos;)
            ),
            NOT(ISNEW())
            )</errorConditionFormula>
    <errorMessage>Paid or Denied Claims are not editable</errorMessage>
</ValidationRule>